--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,6 +41,8 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
+
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.my_app2"
         // You can update the following values to match your application needs.
@@ -64,4 +66,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    'com.android.support:multidex:1.0.1'
+}
