--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1048953934757:ios:8d5f76c4043974ebb84e4c",
-  "FIREBASE_PROJECT_ID": "fir-253c6",
-  "GCM_SENDER_ID": "1048953934757"
+  "GOOGLE_APP_ID": "1:751666032118:ios:90ba4e5a2c1629b0856bd7",
+  "FIREBASE_PROJECT_ID": "fir-beb70",
+  "GCM_SENDER_ID": "751666032118"
 }
