--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   firebase_auth: ^4.10.1
   firebase_core: ^2.17.0
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
